[gd_scene format=3 uid="uid://cct1vrexl6ct0"]

[ext_resource type="Script" uid="uid://cv4jdqhjpjfte" path="res://Main scene/Scripts/main_2.gd" id="1_s3hy6"]
[ext_resource type="PackedScene" uid="uid://4s0bqqebg45q" path="res://Main scene/leafs.tscn" id="2_e4wk8"]
[ext_resource type="PackedScene" uid="uid://dh4cd1arj41st" path="res://Main scene/bg.tscn" id="2_o4irf"]
[ext_resource type="Texture2D" uid="uid://rj0slvhlp4n0" path="res://Main scene/Images/BG_linktree.png" id="4_2gok7"]
[ext_resource type="FontFile" uid="uid://c6okjyrj8b5we" path="res://Main scene/Fonts/Steamwreck.otf" id="5_4ptpv"]
[ext_resource type="Texture2D" uid="uid://bf4h4odpvas27" path="res://Main scene/Images/button.png" id="6_bqx4i"]
[ext_resource type="Texture2D" uid="uid://cx5rj6umr3wah" path="res://Main scene/Images/icon_twitter.png" id="7_h6hcb"]
[ext_resource type="FontFile" uid="uid://beonso1q1xkiu" path="res://Main scene/Fonts/Century Gothic.ttf" id="7_os0a2"]
[ext_resource type="Texture2D" uid="uid://xq840kj1hgu5" path="res://Main scene/Images/icon_discord.png" id="8_4ptpv"]
[ext_resource type="Texture2D" uid="uid://1xp28bdnoc3y" path="res://Main scene/Images/youtube_3670147.png" id="8_cuf1r"]
[ext_resource type="PackedScene" uid="uid://con3wrdlh0gk" path="res://Main scene/steam.tscn" id="10_2mccm"]
[ext_resource type="PackedScene" uid="uid://vnq33lidtd6i" path="res://Main scene/shine.tscn" id="12_t5xxh"]

[node name="ControlMain" type="Control" unique_id=1516402191]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 2.0
offset_right = 5.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_s3hy6")
vfx_leafs = ExtResource("2_e4wk8")
vfx_steam = ExtResource("10_2mccm")
vfx_clicks = ExtResource("12_t5xxh")
buttons_effects = ["SurvivorStory", "SteamClicks"]

[node name="BG" parent="." unique_id=281444924 instance=ExtResource("2_o4irf")]
position = Vector2(961, 1049)

[node name="ControlLinks" type="Control" parent="." unique_id=1419279533]
layout_mode = 1
anchor_left = -0.044000003
anchor_right = 0.95600003
anchor_bottom = 1.0
offset_left = 82.612015
offset_right = -179.17932
offset_bottom = -148.96448
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.1599988, 1.1599988)

[node name="BGLinktree" type="TextureRect" parent="ControlLinks" unique_id=2085448769]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -788.363
offset_top = -450.0
offset_right = -338.36298
offset_bottom = 450.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("4_2gok7")

[node name="Logo" type="TextureRect" parent="ControlLinks" unique_id=905563768]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -133.18982
offset_top = -437.93152
offset_right = 378.81018
offset_bottom = 74.06848
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.5, 0.5)
texture = ExtResource("8_4ptpv")

[node name="Title1" type="RichTextLabel" parent="ControlLinks" unique_id=616294166]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -481.4661
offset_top = -205.17267
offset_right = 474.56946
offset_bottom = -93.10361
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/normal_font = ExtResource("5_4ptpv")
theme_override_font_sizes/normal_font_size = 80
text = "Victorian"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Title2" type="RichTextLabel" parent="ControlLinks" unique_id=803593693]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -94.39673
offset_top = -122.41397
offset_right = 86.638
offset_bottom = -72.41394
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/normal_font = ExtResource("7_os0a2")
theme_override_font_sizes/normal_font_size = 40
text = "Studio"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Desc" type="RichTextLabel" parent="ControlLinks" unique_id=1809896920]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -719.39734
offset_top = -58.620758
offset_right = 732.32837
offset_bottom = -1.7241211
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_fonts/normal_font = ExtResource("7_os0a2")
theme_override_font_sizes/normal_font_size = 30
text = "A brazilian based game studio, which aims to entertain people with our creations."
fit_content = true
horizontal_alignment = 1
vertical_alignment = 1

[node name="Screens" type="Control" parent="ControlLinks" unique_id=1433525037]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 81.079834
offset_bottom = 49.00183
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.95, 0.95)

[node name="GamesControl" type="Control" parent="ControlLinks/Screens" unique_id=341456160]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -871.1443
grow_horizontal = 2
grow_vertical = 2

[node name="Games" type="RichTextLabel" parent="ControlLinks/Screens/GamesControl" unique_id=1971691967]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 529.9461
offset_bottom = -387.09125
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_fonts/normal_font = ExtResource("7_os0a2")
theme_override_font_sizes/normal_font_size = 50
text = "Games"
fit_content = true
horizontal_alignment = 1
vertical_alignment = 1

[node name="ScrollGames" type="ScrollContainer" parent="ControlLinks/Screens/GamesControl" unique_id=1370304448]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 592.9461
offset_bottom = -24.11444
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="FlowContainer" parent="ControlLinks/Screens/GamesControl/ScrollGames" unique_id=317999357]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_filter = 2

[node name="SurvivorStory" type="Button" parent="ControlLinks/Screens/GamesControl/ScrollGames/VBoxContainer" unique_id=671350734]
custom_minimum_size = Vector2(370, 100)
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 5
mouse_filter = 1
mouse_default_cursor_shape = 2
theme_override_font_sizes/font_size = 78
flat = true

[node name="BG" type="TextureRect" parent="ControlLinks/Screens/GamesControl/ScrollGames/VBoxContainer/SurvivorStory" unique_id=477793425]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("6_bqx4i")
expand_mode = 2

[node name="Text" type="RichTextLabel" parent="ControlLinks/Screens/GamesControl/ScrollGames/VBoxContainer/SurvivorStory" unique_id=1751571744]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 93.281364
offset_top = 11.161499
offset_right = -17.190216
offset_bottom = -10.798523
mouse_filter = 1
theme_override_fonts/normal_font = ExtResource("7_os0a2")
theme_override_font_sizes/normal_font_size = 30
bbcode_enabled = true
text = "Survivor Story: The Apocalypse"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Icon" type="Sprite2D" parent="ControlLinks/Screens/GamesControl/ScrollGames/VBoxContainer/SurvivorStory" unique_id=1302373507]
position = Vector2(53.965607, 50.000053)
scale = Vector2(0.15, 0.15)
texture = ExtResource("8_4ptpv")

[node name="ComingSoon1" type="Button" parent="ControlLinks/Screens/GamesControl/ScrollGames/VBoxContainer" unique_id=1338810800]
custom_minimum_size = Vector2(370, 100)
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 5
mouse_filter = 1
theme_override_font_sizes/font_size = 78
disabled = true
flat = true

[node name="BG" type="TextureRect" parent="ControlLinks/Screens/GamesControl/ScrollGames/VBoxContainer/ComingSoon1" unique_id=2001160909]
modulate = Color(0.5132329, 0.5132329, 0.5132329, 1)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("6_bqx4i")
expand_mode = 2

[node name="Text" type="RichTextLabel" parent="ControlLinks/Screens/GamesControl/ScrollGames/VBoxContainer/ComingSoon1" unique_id=728795670]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -11.342285
mouse_filter = 1
theme_override_fonts/normal_font = ExtResource("7_os0a2")
theme_override_font_sizes/normal_font_size = 30
bbcode_enabled = true
text = "Coming Soon..."
horizontal_alignment = 1
vertical_alignment = 1

[node name="Icon" type="Sprite2D" parent="ControlLinks/Screens/GamesControl/ScrollGames/VBoxContainer/ComingSoon1" unique_id=321142194]
visible = false
position = Vector2(53.965607, 50.000053)
scale = Vector2(0.15, 0.15)
texture = ExtResource("8_cuf1r")

[node name="SteamClicks" type="Button" parent="ControlLinks/Screens/GamesControl/ScrollGames/VBoxContainer" unique_id=1811886398]
custom_minimum_size = Vector2(370, 100)
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 5
mouse_filter = 1
mouse_default_cursor_shape = 2
theme_override_font_sizes/font_size = 78
flat = true

[node name="BG" type="TextureRect" parent="ControlLinks/Screens/GamesControl/ScrollGames/VBoxContainer/SteamClicks" unique_id=582028553]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("6_bqx4i")
expand_mode = 2

[node name="Text" type="RichTextLabel" parent="ControlLinks/Screens/GamesControl/ScrollGames/VBoxContainer/SteamClicks" unique_id=1577603467]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 91.46647
offset_top = 10.609802
offset_right = -18.097687
offset_bottom = -10.442749
mouse_filter = 1
theme_override_fonts/normal_font = ExtResource("7_os0a2")
theme_override_font_sizes/normal_font_size = 30
bbcode_enabled = true
text = "Steam & Clicks"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Icon" type="Sprite2D" parent="ControlLinks/Screens/GamesControl/ScrollGames/VBoxContainer/SteamClicks" unique_id=2124236771]
position = Vector2(53.965607, 50.000053)
scale = Vector2(0.15, 0.15)
texture = ExtResource("7_h6hcb")

[node name="ComingSoon2" type="Button" parent="ControlLinks/Screens/GamesControl/ScrollGames/VBoxContainer" unique_id=1288706805]
custom_minimum_size = Vector2(370, 100)
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 5
mouse_filter = 1
theme_override_font_sizes/font_size = 78
disabled = true
flat = true

[node name="BG" type="TextureRect" parent="ControlLinks/Screens/GamesControl/ScrollGames/VBoxContainer/ComingSoon2" unique_id=1403049003]
modulate = Color(0.5132329, 0.5132329, 0.5132329, 1)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("6_bqx4i")
expand_mode = 2

[node name="Text" type="RichTextLabel" parent="ControlLinks/Screens/GamesControl/ScrollGames/VBoxContainer/ComingSoon2" unique_id=73302284]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 11.107422
offset_right = -11.342285
mouse_filter = 1
theme_override_fonts/normal_font = ExtResource("7_os0a2")
theme_override_font_sizes/normal_font_size = 30
bbcode_enabled = true
text = "Coming Soon..."
horizontal_alignment = 1
vertical_alignment = 1

[node name="Icon" type="Sprite2D" parent="ControlLinks/Screens/GamesControl/ScrollGames/VBoxContainer/ComingSoon2" unique_id=2036005758]
visible = false
position = Vector2(53.965607, 50.000053)
scale = Vector2(0.15, 0.15)
texture = ExtResource("7_h6hcb")

[node name="Wonderjack" type="Button" parent="ControlLinks/Screens/GamesControl/ScrollGames/VBoxContainer" unique_id=806511646]
custom_minimum_size = Vector2(370, 100)
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 5
mouse_filter = 1
mouse_default_cursor_shape = 2
theme_override_font_sizes/font_size = 78
flat = true

[node name="BG" type="TextureRect" parent="ControlLinks/Screens/GamesControl/ScrollGames/VBoxContainer/Wonderjack" unique_id=122358689]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("6_bqx4i")
expand_mode = 2

[node name="Text" type="RichTextLabel" parent="ControlLinks/Screens/GamesControl/ScrollGames/VBoxContainer/Wonderjack" unique_id=1811778696]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 90.559135
offset_top = 10.965698
offset_right = -11.745483
offset_bottom = -10.086853
mouse_filter = 1
theme_override_fonts/normal_font = ExtResource("7_os0a2")
theme_override_font_sizes/normal_font_size = 30
bbcode_enabled = true
text = "Wonderjack"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Icon" type="Sprite2D" parent="ControlLinks/Screens/GamesControl/ScrollGames/VBoxContainer/Wonderjack" unique_id=1770622541]
position = Vector2(53.965607, 50.000053)
scale = Vector2(0.15, 0.15)
texture = ExtResource("7_h6hcb")

[node name="ComingSoon3" type="Button" parent="ControlLinks/Screens/GamesControl/ScrollGames/VBoxContainer" unique_id=1198776616]
custom_minimum_size = Vector2(370, 100)
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 5
mouse_filter = 1
theme_override_font_sizes/font_size = 78
disabled = true
flat = true

[node name="BG" type="TextureRect" parent="ControlLinks/Screens/GamesControl/ScrollGames/VBoxContainer/ComingSoon3" unique_id=1898524936]
modulate = Color(0.5132329, 0.5132329, 0.5132329, 1)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("6_bqx4i")
expand_mode = 2

[node name="Text" type="RichTextLabel" parent="ControlLinks/Screens/GamesControl/ScrollGames/VBoxContainer/ComingSoon3" unique_id=337063076]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.200073
offset_right = -11.342194
mouse_filter = 1
theme_override_fonts/normal_font = ExtResource("7_os0a2")
theme_override_font_sizes/normal_font_size = 30
bbcode_enabled = true
text = "Coming Soon..."
horizontal_alignment = 1
vertical_alignment = 1

[node name="Icon" type="Sprite2D" parent="ControlLinks/Screens/GamesControl/ScrollGames/VBoxContainer/ComingSoon3" unique_id=1429541145]
visible = false
position = Vector2(53.965607, 50.000053)
scale = Vector2(0.15, 0.15)
texture = ExtResource("7_h6hcb")

[node name="SocialMediasControl" type="Control" parent="ControlLinks/Screens" unique_id=1675484808]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 871.1443
offset_right = 7.2595215
grow_horizontal = 2
grow_vertical = 2

[node name="SocialMedias" type="RichTextLabel" parent="ControlLinks/Screens/SocialMediasControl" unique_id=1385320455]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 529.9461
offset_bottom = -387.09125
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_fonts/normal_font = ExtResource("7_os0a2")
theme_override_font_sizes/normal_font_size = 50
text = "Social Medias"
fit_content = true
horizontal_alignment = 1
vertical_alignment = 1

[node name="ScrollSocialMedias" type="ScrollContainer" parent="ControlLinks/Screens/SocialMediasControl" unique_id=1838371666]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 592.9461
offset_bottom = -24.11444
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="FlowContainer" parent="ControlLinks/Screens/SocialMediasControl/ScrollSocialMedias" unique_id=400179148]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_filter = 2

[node name="Discord" type="Button" parent="ControlLinks/Screens/SocialMediasControl/ScrollSocialMedias/VBoxContainer" unique_id=646253926]
custom_minimum_size = Vector2(370, 100)
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 5
mouse_filter = 1
mouse_default_cursor_shape = 2
theme_override_font_sizes/font_size = 78
flat = true

[node name="BG" type="TextureRect" parent="ControlLinks/Screens/SocialMediasControl/ScrollSocialMedias/VBoxContainer/Discord" unique_id=1272376141]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("6_bqx4i")
expand_mode = 2

[node name="Text" type="RichTextLabel" parent="ControlLinks/Screens/SocialMediasControl/ScrollSocialMedias/VBoxContainer/Discord" unique_id=1408281020]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 1
theme_override_fonts/normal_font = ExtResource("7_os0a2")
theme_override_font_sizes/normal_font_size = 30
bbcode_enabled = true
text = "Discord"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Icon" type="Sprite2D" parent="ControlLinks/Screens/SocialMediasControl/ScrollSocialMedias/VBoxContainer/Discord" unique_id=1250130234]
position = Vector2(53.965607, 50.000053)
scale = Vector2(0.15, 0.15)
texture = ExtResource("8_4ptpv")

[node name="Youtube" type="Button" parent="ControlLinks/Screens/SocialMediasControl/ScrollSocialMedias/VBoxContainer" unique_id=187223986]
custom_minimum_size = Vector2(370, 100)
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 5
mouse_filter = 1
mouse_default_cursor_shape = 2
theme_override_font_sizes/font_size = 78
flat = true

[node name="BG" type="TextureRect" parent="ControlLinks/Screens/SocialMediasControl/ScrollSocialMedias/VBoxContainer/Youtube" unique_id=176740633]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("6_bqx4i")
expand_mode = 2

[node name="Text" type="RichTextLabel" parent="ControlLinks/Screens/SocialMediasControl/ScrollSocialMedias/VBoxContainer/Youtube" unique_id=458361081]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 1
theme_override_fonts/normal_font = ExtResource("7_os0a2")
theme_override_font_sizes/normal_font_size = 30
bbcode_enabled = true
text = "Youtube"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Icon" type="Sprite2D" parent="ControlLinks/Screens/SocialMediasControl/ScrollSocialMedias/VBoxContainer/Youtube" unique_id=1047260048]
position = Vector2(53.965607, 50.000053)
scale = Vector2(0.15, 0.15)
texture = ExtResource("8_cuf1r")

[node name="Itchio" type="Button" parent="ControlLinks/Screens/SocialMediasControl/ScrollSocialMedias/VBoxContainer" unique_id=354677670]
custom_minimum_size = Vector2(370, 100)
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 5
mouse_filter = 1
mouse_default_cursor_shape = 2
theme_override_font_sizes/font_size = 78
flat = true

[node name="BG" type="TextureRect" parent="ControlLinks/Screens/SocialMediasControl/ScrollSocialMedias/VBoxContainer/Itchio" unique_id=1999494284]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("6_bqx4i")
expand_mode = 2

[node name="Text" type="RichTextLabel" parent="ControlLinks/Screens/SocialMediasControl/ScrollSocialMedias/VBoxContainer/Itchio" unique_id=1192010337]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 1
theme_override_fonts/normal_font = ExtResource("7_os0a2")
theme_override_font_sizes/normal_font_size = 30
bbcode_enabled = true
text = "Itchio"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Icon" type="Sprite2D" parent="ControlLinks/Screens/SocialMediasControl/ScrollSocialMedias/VBoxContainer/Itchio" unique_id=997212928]
position = Vector2(53.965607, 50.000053)
scale = Vector2(0.15, 0.15)
texture = ExtResource("7_h6hcb")

[node name="Instagram" type="Button" parent="ControlLinks/Screens/SocialMediasControl/ScrollSocialMedias/VBoxContainer" unique_id=607856464]
custom_minimum_size = Vector2(370, 100)
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 5
mouse_filter = 1
mouse_default_cursor_shape = 2
theme_override_font_sizes/font_size = 78
flat = true

[node name="BG" type="TextureRect" parent="ControlLinks/Screens/SocialMediasControl/ScrollSocialMedias/VBoxContainer/Instagram" unique_id=480180848]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("6_bqx4i")
expand_mode = 2

[node name="Text" type="RichTextLabel" parent="ControlLinks/Screens/SocialMediasControl/ScrollSocialMedias/VBoxContainer/Instagram" unique_id=1057860244]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 1
theme_override_fonts/normal_font = ExtResource("7_os0a2")
theme_override_font_sizes/normal_font_size = 30
bbcode_enabled = true
text = "Instagram"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Icon" type="Sprite2D" parent="ControlLinks/Screens/SocialMediasControl/ScrollSocialMedias/VBoxContainer/Instagram" unique_id=1051481896]
position = Vector2(53.965607, 50.000053)
scale = Vector2(0.15, 0.15)
texture = ExtResource("7_h6hcb")

[node name="Bluesky" type="Button" parent="ControlLinks/Screens/SocialMediasControl/ScrollSocialMedias/VBoxContainer" unique_id=1832319241]
custom_minimum_size = Vector2(370, 100)
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 5
mouse_filter = 1
mouse_default_cursor_shape = 2
theme_override_font_sizes/font_size = 78
flat = true

[node name="BG" type="TextureRect" parent="ControlLinks/Screens/SocialMediasControl/ScrollSocialMedias/VBoxContainer/Bluesky" unique_id=1008403756]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("6_bqx4i")
expand_mode = 2

[node name="Text" type="RichTextLabel" parent="ControlLinks/Screens/SocialMediasControl/ScrollSocialMedias/VBoxContainer/Bluesky" unique_id=410913136]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 1
theme_override_fonts/normal_font = ExtResource("7_os0a2")
theme_override_font_sizes/normal_font_size = 30
bbcode_enabled = true
text = "Bluesky"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Icon" type="Sprite2D" parent="ControlLinks/Screens/SocialMediasControl/ScrollSocialMedias/VBoxContainer/Bluesky" unique_id=278356421]
position = Vector2(53.965607, 50.000053)
scale = Vector2(0.15, 0.15)
texture = ExtResource("7_h6hcb")

[node name="Twiter" type="Button" parent="ControlLinks/Screens/SocialMediasControl/ScrollSocialMedias/VBoxContainer" unique_id=867976987]
custom_minimum_size = Vector2(370, 100)
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 5
mouse_filter = 1
mouse_default_cursor_shape = 2
theme_override_font_sizes/font_size = 78
flat = true

[node name="BG" type="TextureRect" parent="ControlLinks/Screens/SocialMediasControl/ScrollSocialMedias/VBoxContainer/Twiter" unique_id=159087464]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("6_bqx4i")
expand_mode = 2

[node name="Text" type="RichTextLabel" parent="ControlLinks/Screens/SocialMediasControl/ScrollSocialMedias/VBoxContainer/Twiter" unique_id=1974625965]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 1
theme_override_fonts/normal_font = ExtResource("7_os0a2")
theme_override_font_sizes/normal_font_size = 30
bbcode_enabled = true
text = "Twiter"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Icon" type="Sprite2D" parent="ControlLinks/Screens/SocialMediasControl/ScrollSocialMedias/VBoxContainer/Twiter" unique_id=384476754]
position = Vector2(53.965607, 50.000053)
scale = Vector2(0.15, 0.15)
texture = ExtResource("7_h6hcb")

[node name="MarkerLeafs" type="Marker2D" parent="." unique_id=233325979]
position = Vector2(270, 747.01996)
scale = Vector2(1.1019988, 1.1019988)

[node name="MarkerSteam" type="Marker2D" parent="." unique_id=1692580521]
position = Vector2(206, 840)

[node name="MarkerClicks" type="Marker2D" parent="." unique_id=27939854]
position = Vector2(350, 827.02)

[connection signal="pressed" from="ControlLinks/Screens/GamesControl/ScrollGames/VBoxContainer/SurvivorStory" to="." method="_on_survivor_story_pressed"]
[connection signal="pressed" from="ControlLinks/Screens/GamesControl/ScrollGames/VBoxContainer/SteamClicks" to="." method="_on_steam_clicks_pressed"]
[connection signal="pressed" from="ControlLinks/Screens/GamesControl/ScrollGames/VBoxContainer/Wonderjack" to="." method="_on_wonderjack_pressed"]
[connection signal="pressed" from="ControlLinks/Screens/SocialMediasControl/ScrollSocialMedias/VBoxContainer/Discord" to="." method="_on_discord_pressed"]
[connection signal="pressed" from="ControlLinks/Screens/SocialMediasControl/ScrollSocialMedias/VBoxContainer/Youtube" to="." method="_on_youtube_pressed"]
[connection signal="pressed" from="ControlLinks/Screens/SocialMediasControl/ScrollSocialMedias/VBoxContainer/Itchio" to="." method="_on_itchio_pressed"]
[connection signal="pressed" from="ControlLinks/Screens/SocialMediasControl/ScrollSocialMedias/VBoxContainer/Instagram" to="." method="_on_instagram_pressed"]
[connection signal="pressed" from="ControlLinks/Screens/SocialMediasControl/ScrollSocialMedias/VBoxContainer/Bluesky" to="." method="_on_bluesky_pressed"]
[connection signal="pressed" from="ControlLinks/Screens/SocialMediasControl/ScrollSocialMedias/VBoxContainer/Twiter" to="." method="_on_twiter_pressed"]
